--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
   <!-- HERO -->
   <section class="hero">
+    <div class="hero-overlay"></div>
     <img src="https://i.imghippo.com/files/IHhY6050Qlc.jpeg" alt="Hero WalzShop" />
+    <div class="hero-text">
+      <h1>WalzShop</h1>
+      <p>Top Up Game Instan & Aman</p>
+    </div>
   </section>
 
   <!-- BRAND -->
