--- a/game.html
+++ b/game.html
@@ -22,7 +22,10 @@
   <main class="container">
     <section class="card">
       <h2>Masukkan Data</h2>
-      <div id="userInputs"></div>
+      <div id="userInputs">
+        <input type="text" id="userId" placeholder="Masukkan ID / UID Game" />
+        <input type="email" id="userEmail" placeholder="Masukkan Email aktif" />
+      </div>
     </section>
 
     <section class="card">
